fix scrolling on small screen and made the content on screen fixed so only side bar scrolling

--- a/assets/css/mainScreen.css
+++ b/assets/css/mainScreen.css
@@ -1,8 +1,7 @@
 /* side bar styling */
 .side-navbar {
 	width: 25%;
-	height: 100%;
-	position: fixed;
+	position: absolute;
 	margin-left: -25%;
 	transition: 1s;
 	background-color: #484848 !important;
